k8s-setup/rocm-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: gpu-test-rocm
spec:
  restartPolicy: OnFailure
  containers:
  - name: rocm-container
    image: rocm/pytorch:latest
    command: ["rocm-smi"]
    resources:
      limits:
        amd.com/gpu: 1
    securityContext:
      capabilities:
        add: ["SYS_PTRACE"]
