k8s-setup/dapr-scheduler-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: dapr-scheduler-nodeport
  namespace: dapr-system
spec:
  type: NodePort
  selector:
    app: dapr-scheduler-server
  ports:
    - protocol: TCP
      port: 50006      # Internal gRPC port
      targetPort: 50006
      nodePort: 30006  # Port accessible on the k3d node
