k8s-setup/argocd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  labels:
    app.kubernetes.io/part-of: argocd
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    # Argo CD – accessible at http://argocd.127.0.0.1.sslip.io
    - host: argocd.127.0.0.1.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
